--- a/documentation/modules/upgrading/con-upgrade-sequence.adoc
+++ b/documentation/modules/upgrading/con-upgrade-sequence.adoc
@@ -22,6 +22,12 @@ ZooKeeper-based Apache Kafka clusters are not supported anymore and need to be m
 
 . xref:assembly-upgrade-{context}[Upgrade the Cluster Operator].
 
+. If upgrading to Strimzi 0.49 or later, convert all custom resources and CRDs to the `v1` API.  
++
+The `v1beta2` API is deprecated and will be removed in a future release.  
++
+For more information, see xref:assembly-api-conversion-{context}[Converting Strimzi custom resources to the `v1` API].
+
 . Update the xref:proc-upgrade-kafka-kraft-{context}[Kafka `version` and `metadataVersion`].
 
 NOTE: From Strimzi 0.39, upgrades and downgrades between KRaft-based clusters are supported.   
